--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@turf/turf": "^6.4.0",
+    "axios": "^0.27.2",
     "gh-pages": "^3.2.3",
     "leaflet": "^1.7.1",
     "leaflet-draw": "^1.0.4",
